<package>
 <name>dumbo_cart_vel_controller</name>
  <version>0.1.0</version>
  <description>
    Cartesian velocity controller for CVAP's Dumbo robot using DLS (Damped Least Squares).
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dumbo_cart_vel_controller</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_wrapper</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_wrapper</run_depend>

</package>
